# MCPDockerShell

./: .dockerignore  .env  .gitignore  AGENTS.md  DOCUMENTATION_TOOLS.md  Dockerfile  Dockerfile.sync  LICENSE  README.md  compose.yaml  compose.yml  config.json  configuration.json  docker-compose.yml  documentation_config.json  fastapi_subsidiary_service.py  install.sh  json.json  launch_system.sh  main.py  package-lock.json  package.json  prompt.md  prompt.xml  pyproject.toml  quick_reference.json  requirements.txt  run_local.py  server_version.py  settings.yml  start.sh  status_tracking.py  test.py  test_dashboard.py  test_docs.py
.github/: FUNDING.yml
.github/workflows/: docker-image.yml
config/: settings.yml
docs/: Claude.md  browser-automation.md  nodejs.md  prompt.md  start.md  transport.md
documentation/: main.md  oauth_authentication.md
documentation/api/: api_reference.md
documentation/configuration/: config_guide.md
documentation/examples/: usage_examples.md
documentation/installation/: install_docker.md
documentation/python-docs/: contents.txt  glossary.txt
documentation/tools_and_features/: browser_tools.md  development_tools.md  docker_tools.md  documentation_tools.md  firecrawl_tools.md  monitoring_tools.md  (+1 more)
static_assets/: README.md  settings.yml
subtools/: __init__.py  browser_tools.py  data_storage.py  development_tools.py  docker_tools.py  documentation_tools.py  firecrawl_tools.py  llms_support.py  module_finder.py  monitoring_tools.py  notify.py  prompts.py  searxng_tools.py  workflow_tools.py
templates/: index.html
(+11 files in other folders)
