[project]
name = "mcpdocker"
version = "0.1.0"
description = "Gives a shell to the AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "docker>=7.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
]
